--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="image.png">
     <title>Kalkulator walut</title>
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3719/3719350.png" type="image/gif" sizes="16x16">
     <link href="style.css" rel="stylesheet">
