--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="image.png">
     <title>Kalkulator walut</title>
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3719/3719350.png" type="image/gif" sizes="16x16">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3719/3719350.png">
     <link href="style.css" rel="stylesheet">
     <script defer src="kantor.js"> </script>
 </head>
