--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     </label>
                 </p>
             </form>
+            <p>kurs z dnia 13.04.2022</p>
         </article>
     </main>
 </body>
