--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
             <p>kurs z dnia 13.04.2022</p>
         </article>
     </main>
+    <footer class="footer">
+        <p>@Copyright.2022 Author: Nazar Bychyk</p>
+    </footer>
 </body>
 
 </html>
