--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="image.png">
+    <meta property="og:image" content="img/image.jpg">
     <title>Kalkulator walut</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3719/3719350.png">
-    <link href="style.css" rel="stylesheet">
-    <script defer src="kantor.js"> </script>
+    <link href="css/style.css" rel="stylesheet">
+    <script defer src="js/calculator.js"> </script>
 </head>
 
 <body class="body">
