currency detector added

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
                     <label>
                         <select class="form__select js-selectFrom" name="kantor">
                             <option value="1">PLN</option>
-                            <option value="4.27">USD</option>
-                            <option value="4.65">EUR</option>
+                            <option value="4.44">USD</option>
+                            <option value="4.68">EUR</option>
                             <option value="0.19">CZK</option>
-                            <option value="5.57">GBP</option>
-                            <option value="4.59">CHF</option>
+                            <option value="5.46">GBP</option>
+                            <option value="4.47">CHF</option>
+                            <option value="0.15">UAH</option>
                         </select>
                     </label>
                 </p>
@@ -41,17 +42,18 @@
                     </label>
                     <label>
                         <select class="form__select form__select--backgroundColorGrey js-selectTo" name="kantor">
-                            <option value="4.27">USD</option>
-                            <option value="4.65">EUR</option>
+                            <option value="4.44">USD</option>
+                            <option value="4.68">EUR</option>
                             <option value="0.19">CZK</option>
-                            <option value="5.57">GBP</option>
-                            <option value="4.59">CHF</option>
+                            <option value="5.46">GBP</option>
+                            <option value="4.47">CHF</option>
+                            <option value="0.15">UAH</option>
                             <option value="1">PLN</option>
                         </select>
                     </label>
                 </p>
             </form>
-            <p>kurs z dnia 13.04.2022</p>
+            <p>kurs z dnia 10.05.2022</p>
         </article>
     </main>
     <footer class="footer">
